Fixed nitpick comments from coderabbit.